segundo commit do projeto

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -31,8 +31,8 @@
 
                 <div class="offcanvas-body bg-natal-red">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item "><a class="nav-link  text-white" href="inicio.html">Home</a></li>
-                        <li class="nav-item "><a class="nav-link  text-white" href="produto.html">Produtos</a></li>
+                        <li class="nav-item "><a class="nav-link  text-white" href="html/inicio.html">Home</a></li>
+                        <li class="nav-item "><a class="nav-link  text-white" href="html/produto.html">Produtos</a></li>
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
@@ -42,7 +42,7 @@
 
                                 <!-- Quando NÃO logado -->
                                 <li class="nav-item" id="nav-login"><a class="dropdown-item text-white"
-                                        href="login.html">Entrar</a></li>
+                                        href="html/login.html">Entrar</a></li>
                                 <li class="nav-item" id="nav-register"><a class="dropdown-item text-white"
                                         href="index.html">Cadastrar</a></li>
 
@@ -50,7 +50,7 @@
                                 <li class="nav-item" id="nav-perfil"><a class="dropdown-item text-white" href="#">Minhas
                                         compras</a></li>
                                 <li class="nav-item" id="nav-register"><a class="dropdown-item text-white"
-                                        href="login.html">sair</a></li>
+                                        href="html/login.html">sair</a></li>
 
                             </ul>
                         </li>
@@ -72,7 +72,7 @@
         <div class="right-box">
             <h1>O Polo Norte aqui pertinho da sua casa</h1>
 
-            <button class="btn btn-produtos" onclick="window.location.href='produto.html'">
+            <button class="btn btn-produtos" onclick="window.location.href='html/produto.html'">
                 Venha conhecer nossos produtos
             </button>
         </div>
