--- a/html/produto.html
+++ b/html/produto.html
@@ -30,7 +30,7 @@
 
                 <div class="offcanvas-body bg-natal-red">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item"><a class="nav-link text-white" href="inicio.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="html/inicio.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="#">Produtos</a></li>
 
                         <li class="nav-item dropdown">
@@ -40,14 +40,14 @@
                             <ul class="dropdown-menu bg-natal-green">
 
                                 <li class="nav-item" id="nav-login"><a class="dropdown-item text-white"
-                                        href="login.html">Entrar</a></li>
+                                        href="html/login.html">Entrar</a></li>
                                 <li class="nav-item" id="nav-register"><a class="dropdown-item text-white"
                                         href="index.html">Cadastrar</a></li>
 
                                 <li class="nav-item" id="nav-perfil"><a class="dropdown-item text-white" href="#">Minhas
                                         compras</a></li>
                                  <li class="nav-item" id="nav-register"><a class="dropdown-item text-white"
-                                        href="login.html">sair</a></li>
+                                        href="html/login.html">sair</a></li>
 
                             </ul>
                         </li>
