--- a/html/recuperar.html
+++ b/html/recuperar.html
@@ -24,7 +24,7 @@
         </form>
 
         <p class="text-center mt-3">
-            <a href="login.html">Voltar ao login</a>
+            <a href="html/login.html">Voltar ao login</a>
         </p>
     </div>
 </div>
