--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h3 class="fw-bold">Bem vindos</h3>
             <p class="text-muted">Acesse sua conta </p>
         </div>
-        <form action="html/login.html" method="post">
+        <form action="html/login.html" method="get">
             <div class="text-center text-muted mb-4">
                 <label for="">Usuário</label>
                 <input type="text" class="form-control p-2" required placeholder="Digite seu usuário">
@@ -36,7 +36,7 @@
                 <input type="password" class="form-control p-2"  required placeholder="Digite sua senha novamente">
             </div>
             <button class="btn btn-success w-100 p-2" type="submit" href="html/login.html">Cadastrar</button>
-        </form>
+        </form action="html/login.html" method="get">
         <div class="text-center mt-3">
             <a class="text-decoration-none" href="html/login.html">Já tenho uma conta</a>
         </div>
