sexto commit do projeto

--- a/html/login.html
+++ b/html/login.html
@@ -28,7 +28,7 @@
                 <input type="password" class="form-control p-2" required placeholder="Digite sua senha">
             </div>
             <button class="btn btn-success w-100 p-2" type="submit" href="html/inicio.html">Entrar</button>
-        </form form action="html/inicio.html" method="get">
+        </form action="html/recuperar.html" method="get">
         <div class="text-center mt-3">
             <a class="text-decoration-none" href="html/recuperar.html">Esqueceu sua senha</a>
         </div>
