setimo commit do projeto

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -42,7 +42,7 @@
 
                                 <!-- Quando NÃO logado -->
                                 <li class="nav-item" id="nav-login"><a class="dropdown-item text-white"
-                                        href="html/login.html">Entrar</a></li>
+                                        href="/html/login.html">Entrar</a></li>
                                 <li class="nav-item" id="nav-register"><a class="dropdown-item text-white"
                                         href="index.html">Cadastrar</a></li>
 
@@ -50,7 +50,7 @@
                                 <li class="nav-item" id="nav-perfil"><a class="dropdown-item text-white" href="#">Minhas
                                         compras</a></li>
                                 <li class="nav-item" id="nav-register"><a class="dropdown-item text-white"
-                                        href="html/login.html">sair</a></li>
+                                        href="html/login.html">Sair</a></li>
 
                             </ul>
                         </li>
