--- a/html/login.html
+++ b/html/login.html
@@ -27,7 +27,7 @@
                 <label for="senha">Senha</label>
                 <input type="password" class="form-control p-2" required placeholder="Digite sua senha">
             </div>
-            <button class="btn btn-success w-100 p-2" type="submit" href="inicio.html">Entrar</button>
+            <button class="btn btn-success w-100 p-2" type="submit" href="html/inicio.html">Entrar</button>
         </form action="html/recuperar.html" method="get">
         <div class="text-center mt-3">
             <a class="text-decoration-none" href="html/recuperar.html">Esqueceu sua senha</a>
