--- a/html/login.html
+++ b/html/login.html
@@ -18,7 +18,7 @@
             <h3 class="fw-bold">Bem vindos</h3>
             <p class="text-muted">Acesse sua conta </p>
         </div>
-        <form action="hmtl/inicio.html" method="get">
+        <form action="html/inicio.html" method="get">
             <div class="text-center text-bold mb-4">
                 <label for="usuario">Usuário</label>
                 <input type="text" class="form-control p-2" required placeholder="Digite seu usuário">
