atualizacao do commit

--- a/html/login.html
+++ b/html/login.html
@@ -18,7 +18,7 @@
             <h3 class="fw-bold">Bem vindos</h3>
             <p class="text-muted">Acesse sua conta </p>
         </div>
-        <form action="html/inicio.html" method="get">
+        <form action="inicio.html" method="get">
             <div class="text-center text-bold mb-4">
                 <label for="usuario">Usuário</label>
                 <input type="text" class="form-control p-2" required placeholder="Digite seu usuário">
@@ -28,7 +28,7 @@
                 <input type="password" class="form-control p-2" required placeholder="Digite sua senha">
             </div>
             <button class="btn btn-success w-100 p-2" type="submit" href="inicio.html">Entrar</button>
-        </form action="html/recuperar.html" method="get">
+        </form>
         <div class="text-center mt-3">
             <a class="text-decoration-none" href="recuperar.html">Esqueceu sua senha</a>
         </div>
