atualizacao do commit

--- a/projeto/inicio.html
+++ b/projeto/inicio.html
@@ -8,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/inicio.css">
+    <link rel="stylesheet" href="inicio.css">
 </head>
 
 <body>
@@ -31,8 +31,8 @@
 
                 <div class="offcanvas-body bg-natal-red">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item "><a class="nav-link  text-white" href="html/inicio.html">Home</a></li>
-                        <li class="nav-item "><a class="nav-link  text-white" href="html/produto.html">Produtos</a></li>
+                        <li class="nav-item "><a class="nav-link  text-white" href="inicio.html">Home</a></li>
+                        <li class="nav-item "><a class="nav-link  text-white" href="produto.html">Produtos</a></li>
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
@@ -42,7 +42,7 @@
 
                                 <!-- Quando NÃO logado -->
                                 <li class="nav-item" id="nav-login"><a class="dropdown-item text-white"
-                                        href="/html/login.html">Entrar</a></li>
+                                        href="login.html">Entrar</a></li>
                                 <li class="nav-item" id="nav-register"><a class="dropdown-item text-white"
                                         href="index.html">Cadastrar</a></li>
 
@@ -50,7 +50,7 @@
                                 <li class="nav-item" id="nav-perfil"><a class="dropdown-item text-white" href="#">Minhas
                                         compras</a></li>
                                 <li class="nav-item" id="nav-register"><a class="dropdown-item text-white"
-                                        href="html/login.html">Sair</a></li>
+                                        href="login.html">Sair</a></li>
 
                             </ul>
                         </li>
