--- a/projeto/produto.html
+++ b/projeto/produto.html
@@ -7,7 +7,7 @@
     <title>POLO NORTE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet"   href="css/produto.css">
+    <link rel="stylesheet"   href="produto.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 
                 <div class="offcanvas-body bg-natal-red">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item"><a class="nav-link text-white" href="html/inicio.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="inicio.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="#">Produtos</a></li>
 
                         <li class="nav-item dropdown">
@@ -40,14 +40,14 @@
                             <ul class="dropdown-menu bg-natal-green">
 
                                 <li class="nav-item" id="nav-login"><a class="dropdown-item text-white"
-                                        href="html/login.html">Entrar</a></li>
+                                        href="login.html">Entrar</a></li>
                                 <li class="nav-item" id="nav-register"><a class="dropdown-item text-white"
                                         href="index.html">Cadastrar</a></li>
 
                                 <li class="nav-item" id="nav-perfil"><a class="dropdown-item text-white" href="#">Minhas
                                         compras</a></li>
                                  <li class="nav-item" id="nav-register"><a class="dropdown-item text-white"
-                                        href="html/login.html">sair</a></li>
+                                        href="login.html">sair</a></li>
 
                             </ul>
                         </li>
