--- a/projeto/recuperar.html
+++ b/projeto/recuperar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Recuperar Senha</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet"   href="css/recuperar.css">
+    <link rel="stylesheet"   href="recuperar.css">
 </head>
 
 <body class="recuperar">
@@ -24,7 +24,7 @@
         </form>
 
         <p class="text-center mt-3">
-            <a href="html/login.html">Voltar ao login</a>
+            <a href="login.html">Voltar ao login</a>
         </p>
     </div>
 </div>
