atualizacao do commit

--- a/projeto/inicio.html
+++ b/projeto/inicio.html
@@ -72,7 +72,7 @@
         <div class="right-box">
             <h1>O Polo Norte aqui pertinho da sua casa</h1>
 
-            <button class="btn btn-produtos" onclick="window.location.href='projeto/produto.html'">
+            <button class="btn btn-produtos" onclick="window.location.href='produto.html'">
                 Venha conhecer nossos produtos
             </button>
         </div>
