--- a/projeto/inicio.html
+++ b/projeto/inicio.html
@@ -79,7 +79,7 @@
 
     </div>
 
-    <script src="js/contador.js"></script>
+    <script src="contador.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
