--- a/projeto/login.html
+++ b/projeto/login.html
@@ -13,7 +13,7 @@
 <body class="d-flex justify-content-center align-items-center" style="height: 100vh;">
     <div class="card shadow p-4" style="max-width:400px; width:100%;">
         <div class="text-center mb-4">
-            <img src="C:\Users\pedro\Desktop\TCC\img\logo.png"
+            <img src="C:\Users\pedro\OneDrive\img\logo.png"
                 alt="" class="rouded-circule mb-3" style="width: 100px; height: 100px; border-radius: auto;">
             <h3 class="fw-bold">Bem vindos</h3>
             <p class="text-muted">Acesse sua conta </p>
