atualizacao do projeto

--- a/projeto/inicio.html
+++ b/projeto/inicio.html
@@ -65,7 +65,7 @@
 
     <div class="container-principal">
         <div class="left-box">
-            <img src="C:\Users\pedro\Desktop\TCC\img\papainoel.png" alt="Papai Noel">
+            <img src="img/papainoel.png" alt="Papai Noel">
 
             <div id="cronometro"></div>
         </div>
